--- a/css/style.css
+++ b/css/style.css
@@ -363,12 +363,10 @@ footer {
 .contacto {
   padding: 3rem 1rem;
 }
-
-.contacto img {
+.contacto-img {
   display: none;
 }
-
-.contacto h2 {
+.contacto-h2 {
   text-decoration: underline;
   text-align: center;
 }
