--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -1,15 +1,16 @@
 .contacto{
     padding:3rem 1rem;
-}
 
-.contacto img{
-    display: none;
-}
+    &-img{
+        display: none;
+    }
 
-.contacto h2{
-    text-decoration: underline;
+    &-h2{
+        text-decoration: underline;
     text-align: center;
+    }
 }
+
 
 .form-contacto{
     box-shadow: 2px 2px 10px;
